--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@
   flex-direction: column;
   align-items: center;
   width: 500px;
+  height: 600px;
   border: 2px solid green;
+  position: relative;
 }
 .input_field {
   width: 320px;
@@ -24,6 +26,9 @@
   display: flex;
   justify-content: space-around;
   background-color: #3e3363;
+
+  position: absolute;
+  bottom: 0px;
 }
 #take_input {
   background-color: #3e3363;
@@ -38,7 +43,7 @@
 #take_input:focus {
   outline: none;
 }
-#add_btn {
+.input_button {
   /* margin: ; */
   margin-top: 4px;
   margin-right: 2px;
@@ -46,4 +51,49 @@
   height: 30px;
   border: none;
   border-radius: 5px;
+  font-size: 16px;
+}
+#add_btn {
+  padding-top: 6px;
+  font-size: 17px;
+}
+#edit_btn {
+  display: none;
+}
+
+/* list section */
+#ul_content {
+  /* border: 2px solid blue; */
+  margin-top: 20px;
+  width: 320px;
+  height: 480px;
+  overflow-y: scroll;
+}
+#ul_content::-webkit-scrollbar {
+  width: 10px;
+}
+#ul_content::-webkit-scrollbar-track {
+  background: #1e1a3b;
+  width: 10px;
+}
+#ul_content::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border-left: 4px solid #1e1a3b;
+  border-right: 3px solid #1e1a3b;
+  background: #fff;
+}
+
+#unordered_list {
+  /* border: 2px solid green; */
+  list-style-position: inside;
+}
+.list_items {
+  border-radius: 6px;
+  min-height: 40px;
+  overflow-wrap: break-word;
+  font-size: 18px;
+  padding: 8px;
+  margin-left: -40px;
+  background-color: #3b305f;
+  margin-bottom: 10px;
 }
